fixed footer overlap on homepage

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,12 +7,14 @@
 */
 
 .mainpage-container {
-  // display: inline-block;
-  min-height: 250px;
+  display: inline-block;
+  min-height: 200px;
+  width: 100%;
+  margin: auto;
 }
 
 .mainpage-text {
-  width: 70%;
+  width: 100%;
 }
 
 div.twitter {
@@ -20,6 +22,8 @@ div.twitter {
   width: 30%;
   float: right;
   max-height: 100%;
+  min-height: 600px;
+  display: block;
 }
 
 /* Members Styling */
@@ -144,4 +148,5 @@ $header-thickness: 56px;
   display: block;
   align-content: center;
   margin: auto;
+  position: relative;
 }
